test_regress/t/t_dpi_openreg_bad.out
%Error: t/t_dpi_openreg_bad.v:13: Unsized/open arrays ('[]') are only supported in DPI imports
   reg a [];
       ^
%Error: t/t_dpi_openreg_bad.v:14: Unsized/open arrays ('[]') are only supported in DPI imports
   input b [];
         ^
%Error: Exiting due to
